Revert "arreglo en el feedback al terminar mal un examen de un alumno"
This reverts commit 89de2758e82a94292d037cda18867d29c7461635.